--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 
 body {
     background-color: var(--bg-color);
-    background-image: url('assets/background.png');
+    background-image: url('background.png');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -190,7 +190,7 @@ p {
 .mystery-box {
     width: 120px;
     height: 120px;
-    background-image: url('assets/box.png');
+    background-image: url('box.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -257,7 +257,7 @@ p {
 .card {
     width: 100px;
     height: 160px;
-    background-image: url('assets/card.png');
+    background-image: url('card.png');
     background-size: cover;
     border-radius: 10px;
     cursor: pointer;
@@ -341,6 +341,7 @@ p {
         opacity: 0;
     }
 }
+
 /* Reveal Popup */
 .reveal-popup {
     position: fixed;
@@ -368,6 +369,13 @@ p {
 }
 
 @keyframes scaleIn {
-    from { transform: scale(0.8); opacity: 0; }
-    to { transform: scale(1); opacity: 1; }
+    from {
+        transform: scale(0.8);
+        opacity: 0;
+    }
+
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
